crates/core/src/archiver/snapshots/rustic_core__archiver__tree__tests__tree_iter#windows.snap
---
source: crates/core/src/archiver/tree.rs
expression: result
---
[
    NewTree(
        (
            "C:",
            Node {
                name: "C",
                node_type: Dir,
                meta: Metadata {
                    mode: Some(
                        493,
                    ),
                    mtime: None,
                    atime: None,
                    ctime: None,
                    uid: None,
                    gid: None,
                    user: None,
                    group: None,
                    inode: 0,
                    device_id: 0,
                    size: 0,
                    links: 0,
                    extended_attributes: [],
                },
                content: None,
                subtree: None,
            },
            "C",
        ),
    ),
    NewTree(
        (
            "C:\\a",
            Node {
                name: "a",
                node_type: Dir,
                meta: Metadata {
                    mode: None,
                    mtime: None,
                    atime: None,
                    ctime: None,
                    uid: None,
                    gid: None,
                    user: None,
                    group: None,
                    inode: 0,
                    device_id: 0,
                    size: 0,
                    links: 0,
                    extended_attributes: [],
                },
                content: None,
                subtree: None,
            },
            "a",
        ),
    ),
    NewTree(
        (
            "C:\\a\\b",
            Node {
                name: "b",
                node_type: Dir,
                meta: Metadata {
                    mode: None,
                    mtime: None,
                    atime: None,
                    ctime: None,
                    uid: None,
                    gid: None,
                    user: None,
                    group: None,
                    inode: 0,
                    device_id: 0,
                    size: 0,
                    links: 0,
                    extended_attributes: [],
                },
                content: None,
                subtree: None,
            },
            "b",
        ),
    ),
    EndTree,
    EndTree,
    EndTree,
    NewTree(
        (
            "D:",
            Node {
                name: "D",
                node_type: Dir,
                meta: Metadata {
                    mode: Some(
                        493,
                    ),
                    mtime: None,
                    atime: None,
                    ctime: None,
                    uid: None,
                    gid: None,
                    user: None,
                    group: None,
                    inode: 0,
                    device_id: 0,
                    size: 0,
                    links: 0,
                    extended_attributes: [],
                },
                content: None,
                subtree: None,
            },
            "D",
        ),
    ),
    NewTree(
        (
            "D:\\a",
            Node {
                name: "a",
                node_type: Dir,
                meta: Metadata {
                    mode: None,
                    mtime: None,
                    atime: None,
                    ctime: None,
                    uid: None,
                    gid: None,
                    user: None,
                    group: None,
                    inode: 0,
                    device_id: 0,
                    size: 0,
                    links: 0,
                    extended_attributes: [],
                },
                content: None,
                subtree: None,
            },
            "a",
        ),
    ),
    EndTree,
    EndTree,
]
